# serializer version: 1
# name: test_FeMaSR_1x
  ImageModelDescriptor(
    architecture=FeMaSRArch(
      id='FeMaSR',
      name='FeMaSR',
    ),
    input_channels=3,
    bytes=48706828,
    output_channels=3,
    purpose='Restoration',
    scale=1,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_FeMaSR_2x
  ImageModelDescriptor(
    architecture=FeMaSRArch(
      id='FeMaSR',
      name='FeMaSR',
    ),
    input_channels=3,
    bytes=146844940,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=0, multiple_of=32, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_FeMaSR_4x
  ImageModelDescriptor(
    architecture=FeMaSRArch(
      id='FeMaSR',
      name='FeMaSR',
    ),
    input_channels=3,
    bytes=136239884,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=16, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
